kubernetes/apps/infrastructure/redpanda/app/console-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "networking-sso@kubernetescrd,networking-lan-only@kubernetescrd"
  name: redpanda-console
  namespace: infrastructure
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host "redpanda.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: redpanda-console
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
