kubernetes/apps/infrastructure/redpanda/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-ingress
spec:
  ingressClassName: internal
  rules:
    - host: redpanda.${LIMITED_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redpanda-console
                port:
                  number: 8080
  tls:
    - hosts:
        - redpanda.${LIMITED_DOMAIN}
      secretName: "${LIMITED_DOMAIN/./-}-production-tls"
